# MaddyWeb

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: browser-security.yml  ci.yml  english-policy.yml  security.yml  wsl-maddy-matrix.yml
deploy/examples/: config.native.toml  config.wsl.toml
deploy/systemd/: maddyweb-helper.service  maddyweb-helper.socket  maddyweb.env.example  maddyweb.service  maddyweb.sysusers  maddyweb.tmpfiles
docker/: README.md  config.toml
docs/: compatibility.md  deployment.md  runbook.md  security-gates.md
scripts/: authorize-production.sh  backup.sh  certbot-deploy-hook.py  certbot-deploy-hook.sh  check-english-policy.py  check-maddy-container.py  check-python314t.py  configure-submission.sh  create-session-key.py  docker-volume-config-helper.sh  docker-volume-config.py  inspect-maddy-container.py  install.sh  manage-submission.py  performance-test.py  preflight.sh  render-systemd-sandbox.py  rollback.sh  smoke-test.py  validate-config.py  verify-release-artifact.py
scripts/lib/: backup-unit-state.sh  common.sh
src/maddyweb/: __init__.py  __main__.py  audit.py  certificates.py  cli.py  config.py  docker_certificates.py  gateway.py  helper.py  maddy.py  mail.py  protocol.py  render.py  security.py  web.py
tests/: test_audit.py  test_certificates.py  test_cli.py  test_config.py  test_docker_certificates.py  test_english_policy.py  test_gateway.py  test_helper.py  test_maddy.py  test_mail.py  test_protocol.py  test_security.py  test_web.py
tests/browser/: conftest.py  (+1 more)
(+29 files in other folders)
